bit bugs fix